.charts/tink-backend-provider-configuration/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: provider-configuration-ingress
  namespace: provider-configuration
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
        - path: /provider-service
          backend:
            serviceName: provider-configuration-api
            servicePort: 80
  tls:
    - secretName: ingress-tls
